# MiniBot

./: cogstemplate.txt  main.py  pyproject.toml  webserver.py
cogs/: Music.py  SelfRoleColors.py  SelfRolePings.py  UtilityCommands.py
